--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/Cognigy/RestClient.git"
   },
   "author": "Cognigy GmbH",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "bugs": {
     "url": "https://github.com/Cognigy/RestClient/issues"
   },
